# dblogd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
man/1/: dblogd.1
resources/: dblogd.service  dblogd.yml  log.yml
src/: cli.yml  database.rs  main.rs  mqtt.rs  mqtt_paho.rs  mqtt_subscriber.rs  record.rs  socket.rs
src/sql/: create_database.sql  insert_humidity.sql  insert_illuminance.sql  insert_pressure.sql  insert_record.sql  insert_temperature.sql  insert_uv_index.sql  insert_uva.sql  insert_uvb.sql  select_sensor_id.sql
