[package]
name = "dblogd"
version = "0.1.0"
authors = ["David Oberacker <david.oberacker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.15", features = ["with-chrono"]}
chrono =  { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
log4rs = {version = "0.9", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
serde_json = "1.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
clap = {version = "~2.33.0", features = ["yaml"]}