[package]
name = "dblogd"
version = "0.1.0"
authors = ["David Oberacker <david.oberacker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "^0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

chrono =  { version = "0.4", features = ["serde"] }

postgres = { version = "0.16.0-rc.2", features = ["with-chrono-0_4"]}
postgres-openssl = "0.2.0-rc.1"

log = "0.4"
log4rs = {version = "0.9", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }

ctrlc = { version = "3.1.3", features = ["termination"] }

clap = {version = "~2.33.0", features = ["yaml"]}
