[package]
name = "dblogd"
version = "0.9.1"
authors = ["David Oberacker <david.oberacker@gmail.com>"]
description = "Daemon logger process that inserts Json Objects from IoT devices into a postgres database."
edition = "2018"
readme = "Readme.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "^0.10"
native-tls = "0.2.3"

mosquitto-client = "0.1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

chrono =  { version = "0.4", features = ["serde"] }

postgres = { version = "0.16.0-rc.2", features = ["with-chrono-0_4"]}
postgres-openssl = "0.2.0-rc.1"

log = "0.4"
log4rs = {version = "0.9", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }

ctrlc = { version = "3.1.3", features = ["termination"] }

clap = {version = "~2.33.0", features = ["yaml"]}

[package.metadata.deb]
maintainer = "David Oberacker <david.oberacker@gmail.com>"
copyright = "2019, David Oberacker <david.oberacker@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """"""
depends = "$auto, systemd"
section = "utility"
priority = "optional"
assets = [
    ["target/release/dblogd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/dblogd/README", "644"],
    ["resources/dblogd.service", "etc/systemd/system/dblogd.service", "644"],
    ["resources/dblogd.yml", "etc/dblogd/dblogd.yml", "644"],
    ["man/1/dblogd.1", "usr/share/man", "644"],
]